<resources>
    <string name="app_name">Dictionary Assembly</string>
    <string name="app_name_2_lines">Dictionary \n Assembly</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_home">Từ điển Assembly</string>

    <!--    Màn hình search-->
    <string name="search_hint">Tìm kiếm</string>

    <!--    Màn hình User-->
    <string name="title_bar">Tài khoản</string>
    <string name="menu_signout">Đăng xuất</string>

    <!--    Màn hình login-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="lastname_hint">Họ tên đêm</string>
    <string name="firstname_hint">Tên</string>
    <string name="repass_hint">Xác nhận mật khẩu</string>
    <string name="login_text_button">Đăng nhập</string>
    <string name="wellcome_back">Chào mừng trở lại</string>
    <string name="wellcome_new">Tham gia để học</string>
    <string name="forget_suggest_text">Quên mật khẩu?</string>
    <string name="signup_text_button">Đăng ký</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>