<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login"
    tools:context=".LoginActivity.SignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="-35dp"
            android:background="@drawable/background_button_login_signup"
            android:paddingLeft="30dp"
            android:paddingRight="33dp"
            android:paddingBottom="5dp"
            android:text="@string/signup_text_button"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:background="@drawable/background_form_login"
            android:orientation="vertical"
            android:paddingTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:text="@string/wellcome_back"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shapebgsearch"
                android:hint="@string/email_hint"
                android:padding="10dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/editTextPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/shapebgsearch"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textForget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="33dp"
                    android:text="@string/forget_suggest_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="104dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/background_button_login_signup"
                    android:paddingLeft="30dp"
                    android:paddingRight="33dp"
                    android:paddingBottom="5dp"
                    android:text="@string/login_text_button"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>